# trikernel

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  run.sh
docs/: ADR.md  PRD.md  design.md  instruction.md
examples/: discord_client.py  main.py  register_web_tools.py
examples/tools/: __init__.py  web_tools.py  web_tools.yaml
scripts/: run.sh  run_discord.sh
src/trikernel/: __init__.py  session.py
src/trikernel/api/: __init__.py  session.py
src/trikernel/composition/: __init__.py  main.py  runtime.py  transports.py  ui.py
src/trikernel/execution/: #session.py#  __init__.py  dispatcher.py  loop.py  payloads.py  session.py  transports.py  worker.py
src/trikernel/orchestration_kernel/: __init__.py  config.py  gemini.py  logging.py  memory_manager.py  message_builders.py  message_utils.py  models.py  ollama.py  payloads.py  prompts.py  protocols.py  runners.py  runtime.py  tool_calls.py  types.py
src/trikernel/state_kernel/: __init__.py  config.py  file_store.py  kernel.py  memory_kernel.py  memory_manager.py  memory_schemas.py  memory_store.py  memory_tools.py  message_store.py  models.py  ollama.py  protocols.py
src/trikernel/tool_kernel/: __init__.py  config.py  context.py  dsl.py  kernel.py  langchain_tools.py  logging.py  memory_store.py  models.py  ollama.py  prompts.py  protocols.py  registry.py  runtime.py  state_tools.py  structured_tool.py  system_tools.py  user_profile_tools.py  validation.py  web_tools.py  writing_prompts.py  writing_tools.py
src/trikernel/utils/: __init__.py  env.py  (+3 more)
src/ui/: discord_client_ui.py
(+62 files in other folders)
