[project]
name = "trikernel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "rich>=13.7.0",
  "PyYAML>=6.0.0",
  "langchain>=1.2.0",
  "langchain-community>=0.3.0",
  "langgraph>=1.0.5",
  "langchain-ollama>=1.0.1",
  "langchain-google-genai>=1.0.8",
  "faiss-cpu>=1.8.0",
  "discord-py>=2.6.4",
  "python-dotenv>=1.0.1",
  "rank-bm25>=0.2.2",
  "pytest>=9.0.2",
  "pyzmq>=27.1.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.hatch.build.targets.wheel]
packages = ["src/trikernel"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/trikernel/*/tests"]
